# keyvault

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.js  vercel.json
alembic/: env.py
alembic/versions/: 0002_auth_settings_trash.py  0003_master_password_verifier.py  0004_null_legacy_verifiers.py  0005_drop_mp_verifier.py  0006_optimize_vault_indexes.py
api/: cache.py  crypto.py  database.py  deps.py  index.py  limiter.py  mailer.py  pyproject.toml  requirements.txt  schemas.py  settings.py  user_cache.py  vault_counts.py  vault_serializers.py
api/routes/: auth.py  vault.py
app/(auth)/auth/: page.tsx
app/(dashboard)/dashboard/: page.tsx
app/test/: page.tsx
components/dashboard/: Field.tsx  ItemModal.tsx  LockedVaultScreen.tsx  MainDashboard.tsx  Pagination.tsx  SettingsModal.tsx  Sidebar.tsx  types.ts  utils.ts
components/dashboard/hooks/: useIdleTimer.ts  useSignOut.ts  useVaultUnlock.ts  useVaultViews.ts
extension/: content.js  manifest.json
frontend/: package-lock.json  package.json  proxy.ts  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ThemeSync.tsx
frontend/components/dashboard/: Field.tsx  (+7 more)
frontend/lib/: api.ts  crypto.ts  errors.ts  store.ts  toast.ts  types.ts
frontend/styles/: globals.css
lib/: api.ts  authSync.ts  crypto.ts  errors.ts  store.ts  theme.ts  toast.ts  types.ts
styles/: globals.css
(+3 files in other folders)
