[project]
name = "cipheria-api"
version = "0.1.0"
description = "Cipheria FastAPI backend"
requires-python = ">=3.14,<3.15"
dependencies = [
    "bcrypt==5.0.0",
    "cryptography==46.0.5",
    "email-validator==2.3.0",
    "fastapi==0.135.1",
    "limits==5.8.0",
    "psycopg[binary]==3.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "PyJWT==2.10.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "redis==7.3.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.48",
]

[dependency-groups]
dev = [
    "alembic==1.18.4",
    "ruff==0.15.7",
    "uvicorn==0.41.0",
]

[tool.uv]
package = false
